# Design-Patterns

./: .clang-format  CMakeLists.txt
adapter/: CMakeLists.txt  class_adapter.h  object_adapter.h  test.cpp
bridge/: CMakeLists.txt  bridge.h  test.cpp
command/: CMakeLists.txt  command.h  test.cpp
composite/: CMakeLists.txt  composite.h  test.cpp
decorator/: CMakeLists.txt  decorator.h  test.cpp
dependency_injection/: dependency_injection.h
factory/abstract/: CMakeLists.txt  factory.h  test.cpp
factory/prototype/: CMakeLists.txt  factory.h  test.cpp
factory/scallable/: CMakeLists.txt  factory.h  test.cpp
factory/simple_object/: CMakeLists.txt  factory.h  test.cpp
multimethod/: CMakeLists.txt  multimethod.h  test.cpp
nvi/: CMakeLists.txt  nvi.h  test.cpp
observer/: CMakeLists.txt  clock.h  observer.h  test.cpp
pimpl/: pimpl.h
prototype/copy/: CMakeLists.txt  prototype.h  test.cpp
prototype/figures/: CMakeLists.txt  prototype.cpp  prototype.h  test.cpp
proxy/: CMakeLists.txt  copy_on_write_proxy.h  lazy_copy.h  test.cpp  virtual_proxy.h
singleton/: CMakeLists.txt  logger.h  singleton.h  test.cpp
visitor/: CMakeLists.txt  acyclic_visitor.h  test.cpp  visitor.h  visitors.h
